# AIG_Data_RAG_extraction

./: .gitignore  1.Data_Extraction.py  2.Ground_Truth.py  3.Chunk_Embed.py  4.Retrieval.py  5.Extraction.py  6.Evaluation.py  AGENTS.md  AIG_2025.txt  README.md  chunks.csv  config.py  evaluation_report.txt  extracted.csv  ground_truth.csv  pyproject.toml  requirements.txt  results.csv  retrieved_chunks.csv
src/aig_data_rag/: __init__.py  cli.py  loader.py  pipeline.py  vectorstore.py
tests/: test_cli.py  test_loader.py  test_pipeline.py  test_vectorstore.py
